--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,9 @@ nav{
     font-weight: 800;
     font-size: 20px;
 }
+.benner-text{
+    font-size: 50px;
+}
 nav ul{
     
 }
@@ -38,11 +41,17 @@ nav ul li {
 .text-center{
    text-align : center;
 }
+.text-head{
+    font-weight: 800;
+    font-size: 30px;
+}
 main{
     max-width: 1140px;
 }
 .main-felx{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .skills-container{
     display: flex;
